--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -632,6 +632,10 @@ video {
   opacity: 0.5;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
 body {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
